<resources>
    <string name="app_name">Quizz</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_full_name">User Name</string>
    <string name="users">Users</string>
    <string name="questions">Questions</string>
    <string name="quizzes">Quizzes</string>
    <string name="select_quiz">Select Quiz</string>
    <string name="logout">Logout</string>
    <string name="button_add_user">Add User</string>
    <string name="text_user_name">User Name</string>
    <string name="title_users">Users</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="role">Role</string>
    <string name="button_save">Save</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="question_title">Questions</string>
    <string name="question_option_1">Option 1</string>
    <string name="question_option_2">Option 2</string>
    <string name="question_option_3">Option 3</string>
    <string name="question_option_4">Option 4</string>
    <string name="question_option_5">Option 5</string>
    <string name="question_correct_answer">Correct Answer</string>
    <string name="question_points">Points</string>
    <string name="button_select_quiz">Select Quiz</string>
    <string name="question_placeholder">Enter question text</string>
    <string name="button_add_question">Add Question</string>
    <string name="button_edit_question">Edit Question</string>
    <string name="button_delete_question">Delete Question</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_date">Pick Quiz Creation Date</string>
    <string name="button_add_quiz">Add Quiz</string>
    <string name="button_add_questions_to_quiz">Add Selected Questions</string>
    <string name="button_add_questions">Add Questions</string>
    <string name="button_edit_questions">Edit Questions</string>
    <string name="take_quiz_question_text">Question text will appear here</string>
    <string name="next_question">Next Question</string>
    <string name="button_submit">Submit</string>
    <string name="go_to_home">Return To Home Screen</string>
    <string-array name="sort_options">
        <item>Sort by User</item>
        <item>Sort by Quiz</item>
        <item>Sort by Total Points</item>
    </string-array>
    <string name="results_history">Results History</string>
</resources>