<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etQuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_placeholder"
        android:inputType="textMultiLine"
        android:minHeight="100dp"/>

    <EditText
        android:id="@+id/etOption1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_option_1"/>

    <EditText
        android:id="@+id/etOption2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_option_2"/>

    <EditText
        android:id="@+id/etOption3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_option_3"/>

    <EditText
        android:id="@+id/etOption4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_option_4"/>

    <EditText
        android:id="@+id/etOption5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_option_5"/>

    <EditText
        android:id="@+id/etCorrectAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_correct_answer"/>

    <EditText
        android:id="@+id/etNumberOfPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_points"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnAddQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_question"/>
</LinearLayout>
