<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etQuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_placeholder"
            android:inputType="text" />

        <EditText
            android:id="@+id/etOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_option_1"
            android:inputType="text" />

        <EditText
            android:id="@+id/etOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_option_2"
            android:inputType="text" />

        <EditText
            android:id="@+id/etOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_option_3"
            android:inputType="text" />

        <EditText
            android:id="@+id/etOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_option_4"
            android:inputType="text" />

        <EditText
            android:id="@+id/etOption5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_option_5"
            android:inputType="text" />

        <EditText
            android:id="@+id/etCorrectAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_correct_answer"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_points"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />
    </LinearLayout>

</ScrollView>
