<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etQuizName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quiz_name" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quiz_date" />

    <Button
        android:id="@+id/btnEditQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_edit_questions" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />
</LinearLayout>