<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etQuizName"
        android:hint="@string/quiz_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDate"
        android:hint="@string/quiz_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />

    <Button
        android:id="@+id/btnAddQuestions"
        android:text="@string/button_add_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnAddQuiz"
        android:text="@string/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
