<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvQuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="16dp"
        android:text="@string/take_quiz_question_text" />

    <RadioGroup
        android:id="@+id/rgOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit" />

    <Button
        android:id="@+id/btnNextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="8dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_home"
        android:visibility="gone" />

</LinearLayout>
