<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/userFullNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_full_name"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:padding="8dp"/>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/usersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users"
            android:visibility="gone" />

        <Button
            android:id="@+id/questionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions"
            android:visibility="gone" />

        <Button
            android:id="@+id/quizzesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quizzes"
            android:visibility="gone" />

        <Button
            android:id="@+id/startQuizButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_quiz" />

    </LinearLayout>

</LinearLayout>
